# adns

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  GPL-vs-LGPL  INSTALL  LICENCE.WAIVERS  Makefile  Makefile.am  Makefile.in  NEWS  README  README.html  RELEASE-CHECKLIST  TODO  VERSION  acconfig.h  aclocal.m4  autogen.sh  changelog  common.make.in  configure  configure.ac  configure.in  convert  convert~  old-msg-filter-stuff  old-tree-filter  settings.make  settings.make.in
client/: .cvsignore  Makefile.am  Makefile.in  addrtext.c  adh-main.c  adh-opts.c  adh-query.c  adnsheloex.c  adnshost.c  adnshost.h  adnslogres.c  adnsresfilter.c  adnstest.c  client.h  fanftest.c
dynamic/: .cvsignore  Makefile  Makefile.in
m4/: Makefile.am  Makefile.in
regress/: .cvsignore  Makefile.am  Makefile.in  addcases  adnshost-xinitflags.text  case-1stservbroken.sys  case-1stservtotcp.sys  case-2ndservok.sys  case-2ndservtcp.sys  case-aaaa-simple.sys  case-aaaa-sort.sys  case-abbrev.out  case-abbrev.sys  case-abbrevto.out  case-abbrevto.sys  case-addr-multi-af.sys  case-adh-cancel.sys  case-adh-cancel2.sys  case-adh-cancel3.sys  case-adh-norm.sys  case-adh-pipe.sys  case-alr-norm.sys  case-alr-slow.sys  case-arf-norm.sys  case-arf-text.sys  case-bogus-sortlist.sys  case-brokenmail.out  case-brokenmail.sys  case-child.sys  case-cnametocname.sys  case-comprinf.sys  case-connfail.sys  case-datapluscname.sys  case-datapluscnamewait.sys  case-dh-ptr-aaaa.sys  case-flags10.sys  case-flags9.sys  case-formerr.sys  case-lockup.sys  case-longdom0.sys  (+110 more)
src/: Makefile  Makefile.am  Makefile.in  addrfam.c  adns-config.in  adns-internal.h  adns.c  adns.h  adns.make  check.c  config.h.in  dlist.h  event.c  general.c  harness.h  hcommon.c  hrecord.c  internal.h  libadns.def  libadns.vers  parse.c  platform.h  poll.c  query.c  reply.c  setup.c  source.list  submit.c  transmit.c  tvarith.h  types.c  vbuf.c  versioninfo.rc.in  w32extra.c  w32inet.c  w32support.c
